2009-12-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* comint.el (comint-insert-input): Ignore clicks to the right of
	the field.  Reported by Bob Nnamtrop <bobnnamtrop@gmail.com>.

	* vc.el (vc-print-log-internal): Don't wait for the prcess to
	terminate before setting up the major mode.

	* pcmpl-unix.el (pcomplete/cd): Complete more than one argument, just
	in case.

	* pcomplete.el (pcomplete-std-complete): Don't try to complete past
	the last element.

	* simple.el (normal-erase-is-backspace-mode): Fix thinko in message.

2009-12-01  Glenn Morris  <rgm@gnu.org>

	* window.el (window--display-buffer-2): Fix previous changes.

2009-12-01  Chong Yidong  <cyd@stupidchicken.com>

	* mail/sendmail.el (mail-setup-hook, mail-send-hook): Doc fixes.

2009-12-01  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Add mpc.elc.

2009-12-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mpc.el: New file.

2009-12-01  Glenn Morris  <rgm@gnu.org>

	* window.el (window-to-use): Define for compiler.

	* emacs-lisp/bytecomp.el (byte-compile-save-excursion): Make message
	consistent with others (no final period).

	* mail/rmailmm.el (rmail-mime-handle): Doc fix.
	(rmail-mime-show): Downcase the encoding.  (Bug#5070)

2009-12-01  Dan Nicolaescu  <dann@ics.uci.edu>

	Make vc-print-log buttons work.
	* log-view.el (log-view-mode-map):  Inherit from from widget-keymap.

2009-11-30  Ryan C. Thompson  <rct@thompsonclan.org>  (tiny change)

	* savehist.el (savehist-autosave-interval): Allow setting to nil
	through customize.  (Bug#5056)

2009-11-30  Juanma Barranquero  <lekktu@gmail.com>

	Fix references to jit-lock properties.
	* progmodes/perl-mode.el (perl-font-lock-syntactic-keywords):
	Refer to jit-lock-defer-multiline, not jit-lock-multiline.
	(perl-font-lock-special-syntactic-constructs):
	Quote jit-lock-defer-multiline property.

2009-11-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-registered): Call vc-git-root only once.
